--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,18 @@
 title: "InspireLabs"
 description: "Empowering elementary students through hands-on STEM education"
 baseurl: ""
-url: "https://inspirelabs.org" # Replace with your domain
+url: "https://inspirelabs.org"
 theme: jekyll-theme-minimal
 
-# Navigation
-links:
+# Add this new section for navigation:
+defaults:
+  - scope:
+      path: ""
+    values:
+      layout: "default"
+
+# Navigation (now properly formatted)
+nav:
   - name: "Home"
     url: "/"
   - name: "About"
